--- a/src/components/TodoForm.css
+++ b/src/components/TodoForm.css
@@ -1,3 +1,24 @@
 body {
     background-color: beige;
 }
+
+#todoForm {
+    width: 400px;
+    background-color: burlywood;
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+#todoForm input, textarea, select {
+    width: 80%;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: burlywood;
+    border: none;
+    border-bottom: 3px solid brown;
+}
+
+
+
