--- a/src/components/UpdateStatus.css
+++ b/src/components/UpdateStatus.css
@@ -52,3 +52,15 @@
     padding: 10px;
     border-radius: 10px;
 }
+
+@media (min-width: 1000px) {
+    #updateForm {
+        margin-left: 175px;
+        width: 250px;
+    }
+
+    #updateForm select {
+        width: 150px;
+        text-align: center;
+    }
+}
