--- a/src/components/DeleteButton.css
+++ b/src/components/DeleteButton.css
@@ -17,3 +17,7 @@
     transform: translateX(2px) translateY(2px);
     box-shadow: 0.5px 0.5px 2px rgb(61, 41, 24);
 }
+
+#errorMessage {
+    text-align: center;
+}
